--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -276,15 +276,226 @@
                         app:constraint_referenced_ids="listen_port_text,mtu_text" />
 
                     <TextView
+                        android:id="@+id/junk_packet_count_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/junk_packet_count_text"
+                        android:text="@string/junk_packet_count"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/listen_port_mtu_barrier" />
+
+                    <TextView
+                        android:id="@+id/junk_packet_count_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.junkPacketCount}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/junk_packet_count_label"
+                        tools:text="3" />
+
+                    <TextView
+                        android:id="@+id/junk_packet_min_size_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/junk_packet_min_size_text"
+                        android:text="@string/junk_packet_min_size"
+                        app:layout_constraintEnd_toStartOf="@+id/junk_packet_max_size_label"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/junk_packet_count_text" />
+
+                    <TextView
+                        android:id="@+id/junk_packet_min_size_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.junkPacketMinSize}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toStartOf="@+id/junk_packet_max_size_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/junk_packet_min_size_label"
+                        tools:text="10" />
+
+                    <TextView
+                        android:id="@+id/junk_packet_max_size_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/junk_packet_max_size_text"
+                        android:text="@string/junk_packet_max_size"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/junk_packet_min_size_label"
+                        app:layout_constraintTop_toBottomOf="@+id/junk_packet_count_text" />
+
+                    <TextView
+                        android:id="@+id/junk_packet_max_size_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.junkPacketMaxSize}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/junk_packet_min_size_text"
+                        app:layout_constraintTop_toBottomOf="@+id/junk_packet_min_size_label"
+                        tools:text="30" />
+
+                    <TextView
+                        android:id="@+id/init_packet_junk_size_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/init_packet_junk_size_text"
+                        android:text="@string/init_packet_junk_size"
+                        app:layout_constraintEnd_toStartOf="@+id/response_packet_junk_size_label"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/junk_packet_min_size_text" />
+
+                    <TextView
+                        android:id="@+id/init_packet_junk_size_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.initPacketJunkSize}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toStartOf="@+id/response_packet_junk_size_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_junk_size_label"
+                        tools:text="15" />
+
+                    <TextView
+                        android:id="@+id/response_packet_junk_size_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/response_packet_junk_size_text"
+                        android:text="@string/response_packet_junk_size"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/init_packet_junk_size_label"
+                        app:layout_constraintTop_toBottomOf="@+id/junk_packet_min_size_text" />
+
+                    <TextView
+                        android:id="@+id/response_packet_junk_size_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.responsePacketJunkSize}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/init_packet_junk_size_text"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_junk_size_label"
+                        tools:text="18" />
+
+                    <TextView
+                        android:id="@+id/init_packet_magic_header_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/init_packet_magic_header_text"
+                        android:text="@string/init_packet_magic_header"
+                        app:layout_constraintEnd_toStartOf="@+id/response_packet_magic_header_label"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_junk_size_text" />
+
+                    <TextView
+                        android:id="@+id/init_packet_magic_header_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.initPacketMagicHeader}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toStartOf="@+id/response_packet_magic_header_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_magic_header_label"
+                        tools:text="1020325451" />
+
+                    <TextView
+                        android:id="@+id/response_packet_magic_header_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/response_packet_magic_header_text"
+                        android:text="@string/response_packet_magic_header"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/init_packet_magic_header_label"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_junk_size_text" />
+
+                    <TextView
+                        android:id="@+id/response_packet_magic_header_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.responsePacketMagicHeader}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/init_packet_magic_header_text"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_magic_header_label"
+                        tools:text="3288052141" />
+
+                    <TextView
+                        android:id="@+id/underload_packet_magic_header_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/underload_packet_magic_header_text"
+                        android:text="@string/underload_packet_magic_header"
+                        app:layout_constraintEnd_toStartOf="@+id/transport_packet_magic_header_label"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_magic_header_text" />
+
+                    <TextView
+                        android:id="@+id/underload_packet_magic_header_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.underloadPacketMagicHeader}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toStartOf="@+id/transport_packet_magic_header_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/underload_packet_magic_header_label"
+                        tools:text="2528465083" />
+
+                    <TextView
+                        android:id="@+id/transport_packet_magic_header_label"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/transport_packet_magic_header_text"
+                        android:text="@string/transport_packet_magic_header"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/underload_packet_magic_header_label"
+                        app:layout_constraintTop_toBottomOf="@+id/init_packet_magic_header_text" />
+
+                    <TextView
+                        android:id="@+id/transport_packet_magic_header_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@{config.interface.transportPacketMagicHeader}"
+                        android:textAppearance="?attr/textAppearanceBodyLarge"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/underload_packet_magic_header_text"
+                        app:layout_constraintTop_toBottomOf="@+id/underload_packet_magic_header_label"
+                        tools:text="1766607858" />
+
+                    <androidx.constraintlayout.widget.Barrier
+                        android:id="@+id/amnezia_barrier"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:barrierDirection="bottom"
+                        app:constraint_referenced_ids="underload_packet_magic_header_text,transport_packet_magic_header_text" />
+
+                    <TextView
                         android:id="@+id/applications_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:labelFor="@+id/applications_text"
                         android:text="@string/applications"
-                        android:visibility="@{config.interface.includedApplications.isEmpty() &amp;&amp; config.interface.excludedApplications.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/listen_port_mtu_barrier" />
+                        app:layout_constraintTop_toBottomOf="@+id/amnezia_barrier" />
 
                     <TextView
                         android:id="@+id/applications_text"
